[jdk21] See if adding opens on tree helps java 21 with lombok